* signal.c (sig_trap): don't permit to change a signal handler which   the interpreter reserved. * signal.c (reserved_signal_p): ditto.   [Bug #2616] [ruby-core:27625]

* test/ruby/test_signal.rb (TestSignal#test_reserved_signal):
  added a test for reserved signal.



git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@32523 b2dd03c8-39d4-4d8f-98ff-823fe69b080e